[tool.poetry]
name = "hellodjango"
version = "0.1.0"
description = ""
authors = ["Triston Reeves <triston.reeves123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
django = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
